--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,17 +7,5 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(HelloWorld VERSION 2.0)
 
-
-add_library(
-    printer
-    src/printer.h
-    src/printer.cpp
-)
-
-add_executable(${PROJECT_NAME} src/main.cpp)
-
-target_link_libraries(${PROJECT_NAME} PRIVATE printer)
-
-target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
-
-
+add_subdirectory(src/printer) #Libraries first
+add_subdirectory(src/main)
